// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search 基础快照 1`] = `
<div>
  <form>
    <div
      class="xrk-search xrk-f xrk-ac xrk-search-undefined"
    >
      <div
        class="xrk-search-input-box xrk-f xrk-ac"
        data-testid="search-box"
      >
        <i
          class="xrk-search-icon xrk-icon xrk-i-search"
        />
        <div
          class="xrk-search-input"
        />
        <div />
        <div />
        <button
          class="xrk-btn xrk-if xrk-ac xrk-jc xrk-btn-middle xrk-btn-primary xrk-search-btn"
          data-testid="search-btn"
          type="submit"
        >
          搜索
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`Search 基础快照 light 1`] = `
<div>
  <form>
    <div
      class="xrk-search xrk-f xrk-ac xrk-search-light"
    >
      <div
        class="xrk-search-input-box xrk-f xrk-ac"
        data-testid="search-box"
      >
        <i
          class="xrk-search-icon xrk-icon xrk-i-search"
        />
        <div
          class="xrk-search-input"
        />
        <div />
        <div />
        <button
          class="xrk-btn xrk-if xrk-ac xrk-jc xrk-btn-middle xrk-btn-primary xrk-search-btn"
          data-testid="search-btn"
          type="submit"
        >
          搜索
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`Search 插入尾部内容 1`] = `
<div>
  <form>
    <div
      class="xrk-search xrk-f xrk-ac xrk-search-undefined"
    >
      <div
        class="xrk-search-input-box xrk-f xrk-ac"
        data-testid="search-box"
      >
        <i
          class="xrk-search-icon xrk-icon xrk-i-search"
        />
        <div
          class="xrk-search-input"
        />
        <div />
        <div />
        <button
          class="xrk-btn xrk-if xrk-ac xrk-jc xrk-btn-middle xrk-btn-primary xrk-search-btn"
          data-testid="search-btn"
          type="submit"
        >
          搜索
        </button>
      </div>
      <div
        class="xrk-search-suffix xrk-f xkr-ac"
      >
        <div>
          打卡
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Search 设置提示语列表 1`] = `
<div>
  <form>
    <div
      class="xrk-search xrk-f xrk-ac xrk-search-undefined"
    >
      <div
        class="xrk-search-input-box xrk-f xrk-ac"
        data-testid="search-box"
      >
        <i
          class="xrk-search-icon xrk-icon xrk-i-search"
        />
        <input
          autocomplete="off"
          class="weui-input xrk-search-input xrk-input"
          confirmtype="search"
          data-testid="input"
          name="value"
          type="search"
          value=""
        />
        <div>
          <div
            class="xrk-search-placeholder"
          >
            <div
              class="xrk-search-placeholder-list"
            >
              <div
                class="xrk-search-placeholder-item xrk-f xrk-ac"
              >
                常青藤爸爸
              </div>
              <div
                class="xrk-search-placeholder-item xrk-f xrk-ac"
              >
                @Corn
              </div>
              <div
                class="xrk-search-placeholder-item xrk-f xrk-ac"
              >
                请输入关键字搜索
              </div>
            </div>
          </div>
        </div>
        <div />
        <button
          class="xrk-btn xrk-if xrk-ac xrk-jc xrk-btn-middle xrk-btn-primary xrk-search-btn"
          data-testid="search-btn"
          type="submit"
        >
          搜索
        </button>
      </div>
    </div>
  </form>
</div>
`;
